infrastructure/kubernetes/localstack/ingress-routes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: localstack
  namespace: localstack
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`localstack.openbi.local`)
      kind: Rule
      services:
        - name: localstack
          port: 4566
